# BaseCore

./: Makefile  README.md  程序运行时使用的动态库.txt
Common/: Coroutine.cpp  Coroutine.h  Makefile  OSUtil.cpp  OSUtil.h  Singleton.cpp  main.cpp  test
Election/: CULeaderElectionBean.cpp  LeaderCommand.cpp  LeaderElectionCMD.cpp  LeaderElectionCMD.h  Makefile  ServerNumsChangCMD.cpp  ServerNumsChangCMD.h  test
Election/Demo/: CULeaderElectionBean.h  CUMQClient.h  MQClientDefine.h  Makefile  ThreadCoreBase.h  Timer.h  main.cpp  test
LogBaseCore/: Log.h  LogBaseCore.cpp  LogBaseCore.h  Makefile  Test  main.cpp  日志库总体设计.doc
LogBaseCore/bk/: Backer.log.yyyy-MM-dd  Makefile - 副本  Test  log4cplus.cfg  main.cpp
LogBaseCore/testProc/: Makefile  ceshi.log3516.2017-07-24  logTest.cpp  test
MQClient/: CUMQClient.cpp  CUMQClient.d~  CommonSendCmdThread.cpp  CommonSendCmdThread.d~  CommonSendCmdThread.h  MQClientDefine.cpp  MQClientDefine.d~  Makefile  Makefile.template
MQTest/: Makefile  producerTest  producerTest.cp.bk  producerTest.cpp  producerTest1.cpp
MQTest/facecaltest/: producerTest.cpp
MQTest/log/: mq.log_105826  mq.log_105845  mq.log_105867  mq.log_105878  mq.log_105918  mq.log_105944  mq.log_105963  mq.log_105982  mq.log_106001  mq.log_106020  mq.log_106030  mq.log_106083  mq.log_106109  mq.log_106219  mq.log_106351  mq.log_106422  mq.log_106442  mq.log_106463  mq.log_106490  mq.log_106639  mq.log_106667  mq.log_106705  mq.log_106737  mq.log_122712  mq.log_122736  mq.log_122765  mq.log_122807  mq.log_122864  mq.log_34145  mq.log_34175  mq.log_34372  mq.log_34396  mq.log_34430  mq.log_34991  mq.log_35059  mq.log_54275  mq.log_54323  mq.log_95298  mq.log_95331  mq.log_95382  (+3 more)
MQTest/新建文件夹/: producerTest  producerTest.cpp  producerTest1
MQTest/新建文件夹 (6)/: comsumerTest.cpp
Network/: Makefile  NetSdkListener.h  NetUtils.cpp  NetUtils.h  Parser.cpp  Parser.h  ServerTest.cpp  TcpClientModel.cpp  TcpClientModel.h  TcpClientServerTest.cpp  TcpClientTest.cpp  TcpCommon.cpp  TcpCommon.h  TcpServerModel.cpp  TcpServerModel.h  TcpServerTest.cpp  TcpServerTest.cpp.bk  UdpClientModel.cpp  UdpClientModel.h  UdpClientTest.cpp  UdpCommon.cpp  UdpCommon.h  UdpServerModel.cpp  UdpServerModel.h  UdpServerTest.cpp  test  现存问题.txt
Network/TCP同步代码/: Client.cpp  Server.cpp
Network/Test64/: TcpClientTest  test.txt  whiteUserMassagetest0.txt
Proto/: Makefile  Makefile - 副本  Makefile,bk
Proto/Common/: ActionLinkBean.pb.cc  ActionLinkBean.pb.h  ActionLinkBean.proto  AlarmBean.pb.cc  AlarmBean.pb.h  AlarmBean.proto  AlarmHost.pb.cc  AlarmHost.pb.h  AlarmHost.proto  AlarmType.pb.cc  AlarmType.pb.h  AlarmType.proto  BMSAcceptBPX.pb.cc  BMSAcceptBPX.pb.h  BMSAcceptBPX.proto  BMSBPXHeartBean.pb.cc  BMSBPXHeartBean.pb.h  BMSBPXHeartBean.proto  BPXAskForBMSAddress.pb.cc  BPXAskForBMSAddress.pb.h  BPXAskForBMSAddress.proto  BPXConnectToBMS.pb.cc  BPXConnectToBMS.pb.h  BPXConnectToBMS.proto  CMakeLists.txt  CaptureDataBean.pb.cc  CaptureDataBean.pb.h  CaptureDataBean.proto  CatalogBean.pb.cc  CatalogBean.pb.h  CatalogBean.proto  DataDistributeBean.pb.cc  DataDistributeBean.pb.h  DataDistributeBean.proto  DataType.pb.cc  DataType.pb.h  DataType.proto  DevInfoListBean.pb.cc  DevInfoListBean.pb.h  DevInfoListBean.proto  (+59 more)
Proto/Common/bk/: DataType.proto  DevInfoListBean.pb.cc  DevInfoListBean.pb.h  DevInfoListBean.proto  DevOperateCmd.proto  ModuleType.proto
Threads/: CommandBase.cpp  CommandBase.h  Condition.cpp  Condition.h  CrossPlatform.h  Makefile  MsgTarget.cpp  MsgTarget.h  Mutex.cpp  Mutex.h  ThreadCoreBase.cpp  ThreadCoreBase.h  ThreadPool.cpp  ThreadPool.h
Timer/: Makefile  Timer.cpp  main.cpp
mqtt/: MQTTModule.cpp  MQTTModule.h  Makefile  all.sh  main.cpp  mqttclient  publication  publication.cpp  subscription  subscription.cpp
(+202 files in other folders)
